# CarBuddy

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/alexpettit/carbuddy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/alexpettit/carbuddy/: CarBuddyView.kt  CustomizeActivity.kt  MainActivity.kt
app/src/main/java/com/alexpettit/carbuddy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/mipmap-anydpi-v26/: carbuddy_launcher.xml
app/src/main/res/values/: carbuddy_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/alexpettit/carbuddy/: ExampleUnitTest.kt
